fixed overflow problem on page2

--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ a {
     text-align: center;
     font-weight: bold;
     margin-top: -1px;
-    height: 25%;
+    height: 20%;
     background-color: rgb(255, 249, 167);
 }
 .header-image-page2 {
